--- a/alcatraz-braad.pot
+++ b/alcatraz-braad.pot
@@ -1,10 +1,10 @@
-# Copyright (C) 2015 Carrie Forde, Braad Martin, Jordan Gonzales
+# Copyright (C) 2015 Braad Martin
 # This file is distributed under the GNU General Public License v2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Alcatraz Child 1.0.0\n"
+"Project-Id-Version: Alcatraz Braad 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/style\n"
-"POT-Creation-Date: 2015-11-30 06:33:43+00:00\n"
+"POT-Creation-Date: 2015-11-30 07:49:49+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,13 +14,13 @@ msgstr ""
 "X-Generator: grunt-wp-i18n 0.5.3\n"
 
 #. Theme Name of the plugin/theme
-msgid "Alcatraz Child"
+msgid "Alcatraz Braad"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "A demo child theme for Alcatraz."
+msgid "An awesome child theme for Alcatraz."
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "Carrie Forde, Braad Martin, Jordan Gonzales"
+msgid "Braad Martin"
 msgstr ""
